--- a/404.md
+++ b/404.md
@@ -1,12 +1,6 @@
 ---
-layout: page
-title: "Page not found"
-permalink: /404.html
-hide: true
+title: 404
+layout: 404
 ---
-<div id="error404">
-    <h1>Oops, Nothing to see here! 🙉</h1>
-    <a href="{{ site.url }}" class="return-btn">
-        <p>Click here to return to the main page!!</p>
-    </a>
-</div>
+
+The page you're trying to load was not found
